--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/styled": "^11.1.5",
     "axios": "^0.21.1",
     "framer-motion": "^3.10.2",
-    "next": "10.0.8",
+    "next": "^10.0.9",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.2.0",
